--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,6 +25,9 @@ builds:
       - ASSUME_NO_MOVING_GC_UNSAFE_RISK_IT_WITH=go1.20
       - CGO_ENABLED=0
 
+    ldflags:
+      - -s -w -X github.com/apecloud/kubeblocks/version.BuildDate={{.Date}} -X github.com/apecloud/kubeblocks/version.GitCommit={{.Commit}} -X github.com/apecloud/kubeblocks/version.Version={{.Tag}}
+
 archives:
   - format: tar.gz
     name_template: >-
@@ -130,14 +133,14 @@ checksum:
   name_template: '{{ .ProjectName }}-checksums.txt'
   algorithm: sha256
 
-signs:
-  - artifacts: package
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "${artifact}", "{{ .ProjectName }}"]
-    stdin: '{{ .Env.GPG_PASSWORD }}'
-
 #signs:
-#  - artifacts: checksum
-#    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+#  - artifacts: package
+#    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "${artifact}", "{{ .ProjectName }}","--detach-sign", "${artifact}"]
+#    stdin: '{{ .Env.GPG_PASSWORD }}'
+
+signs:
+  - artifacts: checksum
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "${artifact}"]
 
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
