--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Publish a release and upload assets
         uses: cb80/pubrel@v0.17.0
+        replace: true
         with:
           files: |
             t2.txt
