--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Upload release assets to an existing release
         uses: echapmanFromBunnings/upload-release-assets@1.3
         with:
-          releaseTag: ${{ env.TAG_NAME }}
+          releaseTag: 'v0.8.1'
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           files: |
             *.txt
