--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,72 +1,72 @@
-name: test
-
-on:
-  push:
-
-permissions:
-  contents: write
-  # packages: write
-  # issues: write
-
-env:
-  GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-  TAG_NAME: ${{ github.ref_name }}
-  CLI_REPO: 'huyongqii/tap-test'
-  CLI_NAME: 'kbcli'
-  GITLAB_ACCESS_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
-  FURY_TOKEN: ${{ secrets.FURY_UPLOAD_TOKEN }}
-  FURY_ACCOUNT: 'huyongqii'
-  GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-  PASSPHRASE: ${{ secrets.PASSPHRASE }}
-
-jobs:
-  goreleaser:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "1.20"
-      - run: |
-          git fetch --force --tags
-          mkdir dist
-          cd dist
-          touch t1.txt
-          touch t2.txt
-          touch t3.txt
-          echo "t1" > t1.txt
-          echo "t2" > t2.txt
-          echo "t3" > t3.txt
-          tar -czvf t1.tar.gz t1.txt
-          tar -czvf t3.tar.gz t3.txt
-          zip -r t2.zip t2.txt
-
-#      - name: upload assets to kubeblocks's release
-#        uses: Hs1r1us/Release-AIO@v2.0.0
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          tag_name: ${{ github.ref }}
-#          asset_files: '${{ github.workspace }}/tmp'
+#name: test
 #
-#      - name: Publish a release and upload assets
-#        uses: cb80/pubrel@v0.17.0
+#on:
+#  push:
+#
+#permissions:
+#  contents: write
+#  # packages: write
+#  # issues: write
+#
+#env:
+#  GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+#  TAG_NAME: ${{ github.ref_name }}
+#  CLI_REPO: 'huyongqii/tap-test'
+#  CLI_NAME: 'kbcli'
+#  GITLAB_ACCESS_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+#  FURY_TOKEN: ${{ secrets.FURY_UPLOAD_TOKEN }}
+#  FURY_ACCOUNT: 'huyongqii'
+#  GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+#  PASSPHRASE: ${{ secrets.PASSPHRASE }}
+#
+#jobs:
+#  goreleaser:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
 #        with:
-#          replace: true
+#          fetch-depth: 0
+#      - uses: actions/setup-go@v4
+#        with:
+#          go-version: "1.20"
+#      - run: |
+#          git fetch --force --tags
+#          mkdir dist
+#          cd dist
+#          touch t1.txt
+#          touch t2.txt
+#          touch t3.txt
+#          echo "t1" > t1.txt
+#          echo "t2" > t2.txt
+#          echo "t3" > t3.txt
+#          tar -czvf t1.tar.gz t1.txt
+#          tar -czvf t3.tar.gz t3.txt
+#          zip -r t2.zip t2.txt
+#
+##      - name: upload assets to kubeblocks's release
+##        uses: Hs1r1us/Release-AIO@v2.0.0
+##        env:
+##          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+##        with:
+##          tag_name: ${{ github.ref }}
+##          asset_files: '${{ github.workspace }}/tmp'
+##
+##      - name: Publish a release and upload assets
+##        uses: cb80/pubrel@v0.17.0
+##        with:
+##          replace: true
+##          files: |
+##            ${{ github.workspace }}/dist/kbcli
+##            t3.txt
+#
+#      - name: Upload release assets to an existing release
+#        uses: echapmanFromBunnings/upload-release-assets@1.3
+#        with:
+#          releaseTag: 'v0.8.2'
+#          githubToken: ${{ secrets.GITHUB_TOKEN }}
 #          files: |
-#            ${{ github.workspace }}/dist/kbcli
-#            t3.txt
-
-      - name: Upload release assets to an existing release
-        uses: echapmanFromBunnings/upload-release-assets@1.3
-        with:
-          releaseTag: 'v0.8.2'
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          files: |
-            ./dist/*.tar.gz
-            ./dist/*.zip
-
-
-
+#            ./dist/*.tar.gz
+#            ./dist/*.zip
+#
+#
+#
