--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -144,7 +144,7 @@ checksum:
 
 signs:
   - artifacts: checksum
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--sign", "${artifact}"]
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--sign", "${artifact}"]
 
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
