--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -144,7 +144,7 @@ checksum:
 
 signs:
   - artifacts: package
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${artifact}", "--sign", "${artifact}"]
+    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--sign", "${artifact}"]
 
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
